# ddd-fast-api

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  main.py  manifest  package-lock.json  package.json  pyproject.toml
.beads/: metadata.json
.github/workflows/: quality.yml
.husky/: commit-msg  pre-commit
alembic/: env.py  script.py.mako
alembic/versions/: 20260718_183900_create_catalog_items.py
docs/: scaffolding.md
docs/adr/: README.md
src/ddd_fast_api/: __init__.py  bootstrap.py
src/ddd_fast_api/application/: __init__.py
src/ddd_fast_api/application/catalog/: __init__.py  use_cases.py
src/ddd_fast_api/application/identity/: __init__.py  use_cases.py
src/ddd_fast_api/domain/: __init__.py
src/ddd_fast_api/domain/catalog/: __init__.py  entities.py  repositories.py  value_objects.py
src/ddd_fast_api/domain/identity/: __init__.py  entities.py  (+2 more)
src/ddd_fast_api/entrypoints/: __init__.py
src/ddd_fast_api/foundation/: __init__.py  errors.py  logging.py  settings.py
src/ddd_fast_api/infrastructure/: __init__.py
tests/architecture/: test_domain_import_rules.py
tests/integration/: test_catalog_sqlalchemy_path.py  test_identity_sqlalchemy_path.py
tests/unit/: test_bootstrap.py  test_catalog_domain.py  test_catalog_http.py  test_catalog_persistence_adapter.py  test_catalog_use_cases.py  test_errors.py  test_identity_domain.py  test_identity_http.py  test_identity_persistence_adapter.py  test_identity_use_cases.py  test_logging.py  test_persistence_scaffold.py  test_settings.py
(+23 files in other folders)
