[project]
name = "ddd-fast-api"
version = "0.1.0"
requires-python = ">=3.12"
description = "A pragmatic DDD FastAPI service template inspired by Ardan Labs Service."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Owen Adirah" }
]
dependencies = [
  "alembic>=1.16,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "mypy>=1.20.2",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "uvicorn>=0.32,<1.0",
]

[project.urls]
Homepage = "https://github.com/owezzy/ddd-fast-api"
Repository = "https://github.com/owezzy/ddd-fast-api"
Issues = "https://github.com/owezzy/ddd-fast-api/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ddd_fast_api"]
